Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sp_series/include/sp_api.h


        typedef unsigned char      uint8_t;

/**
 * Status code returned from all SP API functions.
 */
typedef enum SpStatus {
    /** Internal use only. */
    spInternalFlashErr = -101,
    /** Internal use only. */
    spInternalFileIOErr = -100,

    /** Context sensitive GPS error. */
    spGPSErr = -12,
    /**
     * Unable to allocate memory for the measurement. Out of system memory.
     */
    spAllocationErr = -11,
    /** At maximum number of devices that can be interfaced. */
    spMaxDevicesConnectedErr = -10,
    /**
     * Often the result of trying to perform an action while the device is currently
     * making a measurement or not in an idle state, or performing an action
     * that is not supported by the current mode of operation. For instance,
     * requesting a sweep while the device is configured for I/Q streaming.
     */
    spInvalidConfigurationErr = -9,
    /**
     * For standard sweeps, this error indicates another sweep is already being
     * performed. You might encounter this in a multi-threaded application. For
     * queued sweep lists, this indicates the sweep at the given position is
     * already active. Finish this sweep before starting again.
     */
    spSweepAlreadyActiveErr = -8,
    /** Boot error */
    spBootErr = -7,
    /**
     * Indicates USB data framing issues. Data may be corrupt.
     * If error persists, reconfiguration/cycling might be required.
    */
    spFramingErr = -6,
    /**
     * Device disconnected. Will require the device to be closed and reopened
     * to continue. Most likely cause is large USB data loss or cable connectivity
     * issues.
     */
    spConnectionLostErr = -5,
    /** Invalid device handle specified. */
    spInvalidDeviceErr = -4,
    /** One or more required pointer parameters are null. */
    spNullPtrErr = -3,
    /** One or more required parameters found to have an invalid value. */
    spInvalidParameterErr = -2,
    /** 
     * Unable to open device.
     * Verify the device is connected and the LED is solid green.
     */
    spDeviceNotFoundErr = -1,

    /** Function returned successfully. */
    spNoError = 0,

    /** One or more of the provided parameters were clamped to a valid range. */
    spSettingClamped = 1,
    /** 
     * Temperature drift occured since last configuration.
     * Measurements might be uncalibrated. Reconfiguring the device when possible will
     * eliminate this warning.
     */
    spTempDrift = 2,
    /** Measurement includes data which caused an ADC overload (clipping/compression) */
    spADCOverflow = 3,
    /** Measurement is uncalibrated, overrides ADC overflow */
    spUncalData = 4,
    /** Returned when the API was unable to keep up with the necessary processing */
    spCPULimited = 5,
    /** 
     * This warning is returned when recoverable USB data loss occurred. The measurement
     * may be uncalibrated due to the data loss and may need to be ignored. The device
     * can continue to be used without any action/intervention. This warning can appear 
     * in periods of high CPU or USB load. 
     */
    spInvalidCalData = 6
} SpStatus;


/**
 * See @ref writingToGPS. Use this function to send messages to the internal 
 * u-blox M8 GPS. Messages provided are rounded/padded up to the next multiple 
 * of 4 bytes. The padded bytes are set to zero.
 *
 * @param[in] device Device handle.
 *
 * @param[in] mem The message to send to the GPS.

 * @param[in] len The length of the message in bytes.
 *
 * @return
 */
SP_API SpStatus spWriteToGPS(int device, const uint8_t *mem, int len);


/**
 * Specify the temperature of the device at which the internal fan attempts to
 * maintain. The available temperature range is between [0-60] degrees. The fan
 * uses a closed loop algorithm to reach the target temperature. Set to the
 * maximum or minimum set point to force 0 or 100% fan speed.
 * 
 * This function must be called when the device is idle (no measurement mode active).
 *
 * @param[in] device Device handle.
 *
 * @param[in] setPoint Temperature set point in Celcius.
 *
 * @return
 */
SP_API SpStatus spSetFanSetPoint(int device, float setPoint);


/**
 * Get current fan temperature threshold and voltage.
 *
 * @param[in] device Device handle.
 *
 * @param[out] setPoint Temperature set point in Celcius. Can be NULL.
 *
 * @param[out] voltage Voltage in V. Can be NULL.
 *
 * @return
 */
SP_API SpStatus spGetFanSettings(int device, float *setPoint, float *voltage);


/**
 * Retrieve a descriptive string of an #SpStatus enumeration. Useful for
 * debugging and diagnostic purposes.
 *
 * @param[in] status Status code returned from any API function.
 *
 * @return
 */
SP_API const char* spGetErrorString(SpStatus status);


/**
 * Get the API version.
 *
 * @return
 * The returned string is of the form
 *
 * major.minor.revision
 *
 * Ascii periods ('.') separate positive integers. Major/minor/revision are not
 * guaranteed to be a single decimal digit. The string is null terminated. The
 * string should not be modified or freed by the user. An example string is
 * below?
 *
 * ['3' | '.' | '0' | '.' | '1' | '1' | '\0'] = "3.0.11"
 */
SP_API const char* spGetAPIVersion();