Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sp_series/examples/csharp/sp_api.cs


    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spWriteToGPS(int device, in byte[] mem, int len);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetFanSetPoint(int device, float setPoint);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetFanSettings(int device, ref float setPoint, ref float voltage);

    public static string spGetAPIString()
    {
        return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(spGetAPIVersion());
    }

    public static string spGetStatusString(SpStatus status)
    {
        return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(spGetErrorString(status));
    }

    // Call string variants above instead
    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    private static extern IntPtr spGetErrorString(SpStatus status);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    private static extern IntPtr spGetAPIVersion();
}
